--- a/package.json
+++ b/package.json
@@ -28,5 +28,10 @@
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.25.0",
     "webpack-cli": "^3.1.2"
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "ie >= 9"
+  ]
 }
